@@ -376,7 +376,8 @@ post-processing of such volumes.
 <LI><B><A HREF="man/corrsearch3d.html#TOP">corrsearch3d</A></B>
 : Search for displacements between two volumes at an array of positions.
 <LI><B><A HREF="man/densmatch.html#TOP">densmatch</A></B>
-: Scale densities in one volume to match those in another.
+: Scale densities in one volume to match those in another volume or to have a
+  given mean/SD.
 <LI><B><A HREF="man/densnorm.html#TOP">densnorm</A></B>
 : Normalize densities in an image file to represent projected mass density.
 <LI><B><A HREF="man/edgepatches.html#TOP">edgepatches</A></B>
